@@ -757,6 +757,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8695. TestPathData fails intermittently with JDK7 (Trevor
     Robinson via tgraves)
 
+    HADOOP-8611. Allow fall-back to the shell-based implementation when 
+    JNI-based users-group mapping fails (Robert Parker via bobby) 
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
